# Music-Generator-from-TopMediai

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 37e085568a88_initial_migration.py  9528279fb3a1_new_fields.py  d1ef1862bc75_voice.py  f5c3c963a670_added_audition_url.py
app/: configs.py  database.py  exceptions.py  manage.py
app/admin/: admin.py
app/apps/: router.py
app/apps/musicai_app/schemas/requests/: audio_processing_schema.py
app/apps/musicai_app/services/business_services/: download_music.py  generate_music.py  generate_text_to_speech.py  top_media_music_generator.py  top_media_text2spech.py
app/apps/musicai_app/services/infrastructure_services/: application_statistics_service.py  music_generator_service.py  voice_service.py
app/apps/musicai_app/views/: media_processing.py  router.py  top_media_processing.py  voice.py
app/core/: constants.py
app/core/logging/: __init__.py  configs.py  filters.py  formatters.py
app/models/: application.py  request_stats.py  template.py  voice.py
app/utils/: elevenlabs_client.py  top_media_client.py  top_media_parser.py
nginx/: nginx.conf
